# remote_server_manager

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 74c38a7bdfc1_first.py  92306ff20ea0_command.py  e08cbf40606a_server_username.py  fc8fc2d44f72_command_add.py
backend/app/: main.py
backend/app/api/: routers.py
backend/app/api/endpoints/: __init__.py  action.py  command.py  server.py  user.py
backend/app/core/: base.py  config.py  constants.py  init_db.py  logger.py  user.py
backend/app/crud/: command.py  server.py
backend/app/models/: __init__.py  command.py  server.py  user.py
backend/app/schemas/: action.py  command.py  server.py  user.py
backend/app/services/: action.py
backend/env/: env.example  id_rsa.example
frontend/: Dockerfile  fletapp.py  pyproject.toml  requirements.txt
